# Benfords-Law

./: .gitignore  Extract-features.py  Extract-first-digits.py  Extrat-first-digits  README.md  Tables-CVM.m  Tables-Spearman.m  Tables_Pearson.m  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ImageForensics/: feature_extraction.py
modules/: setup.py
modules/ImageForensics/: __init__.py  feature_extraction.py
notebooks/: curvefit.ipynb  dct-demo-logbenford.ipynb  dct-demo.ipynb  demo.ipynb  first-decimal-point-benford.ipynb  single-image.ipynb
