[project]
name = "Benfords-Law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel",
    "icecream",
    "tqdm",
    "matplotlib",
    "numpy",
    "pillow",
    "scipy",
    "imageforensics",
    "pandas>=2.2.3",
    "nb-clean>=4.0.1",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
imageforensics = { path = "modules", editable = true }
