[project]
name = "Benfords-Law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "icecream>=2.1.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "nb-clean>=4.0.1",
    
    "imageforensics",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
imageforensics = { path = "modules", editable = true }
