[project]
name = "Benfords-Law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "icecream>=2.1.3",
    "tqdm>=4.67.1",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.3",
    "nb-clean>=4.0.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",

    "imageforensics",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
imageforensics = { path = "modules", editable = true }
